# reading-code-of-nginx-1.9.2

nginx-1.9.2/: CMakeLists.txt  Makefile  yang.txt
nginx-1.9.2/objs/: Makefile  autoconf.err  ngx_auto_config.h
nginx-1.9.2/src/core/: nginx.c  ngx_conf_file.c  ngx_conf_file.h  ngx_connection.h  ngx_cycle.c
nginx-1.9.2/src/http/: ngx_http.c  ngx_http_request.h  ngx_http_upstream.h
nginx-1.9.2/src/http/modules/: ngx_http_proxy_module.c
nginx-1.9.2/src/my_test_module/: ngx_http_mytest_module.c
nginx-1.9.2/src/mytest_upstream/: mytest_upstream.c
nginx-1.9.2/src/os/unix/: ngx_gcc_atomic_x86.h
