cmake_minimum_required(VERSION 3.6)
project(nginx_1_9_2)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    objs/ngx_auto_config.h
    objs/ngx_auto_headers.h
    objs/ngx_modules.c
    src/core/nginx.c
    src/core/nginx.h
    src/core/ngx_array.c
    src/core/ngx_array.h
    src/core/ngx_buf.c
    src/core/ngx_buf.h
    src/core/ngx_conf_file.c
    src/core/ngx_conf_file.h
    src/core/ngx_config.h
    src/core/ngx_connection.c
    src/core/ngx_connection.h
    src/core/ngx_core.h
    src/core/ngx_cpuinfo.c
    src/core/ngx_crc.h
    src/core/ngx_crc32.c
    src/core/ngx_crc32.h
    src/core/ngx_crypt.c
    src/core/ngx_crypt.h
    src/core/ngx_cycle.c
    src/core/ngx_cycle.h
    src/core/ngx_file.c
    src/core/ngx_file.h
    src/core/ngx_hash.c
    src/core/ngx_hash.h
    src/core/ngx_inet.c
    src/core/ngx_inet.h
    src/core/ngx_list.c
    src/core/ngx_list.h
    src/core/ngx_log.c
    src/core/ngx_log.h
    src/core/ngx_md5.c
    src/core/ngx_md5.h
    src/core/ngx_murmurhash.c
    src/core/ngx_murmurhash.h
    src/core/ngx_open_file_cache.c
    src/core/ngx_open_file_cache.h
    src/core/ngx_output_chain.c
    src/core/ngx_palloc.c
    src/core/ngx_palloc.h
    src/core/ngx_parse.c
    src/core/ngx_parse.h
    src/core/ngx_parse_time.c
    src/core/ngx_parse_time.h
    src/core/ngx_proxy_protocol.c
    src/core/ngx_proxy_protocol.h
    src/core/ngx_queue.c
    src/core/ngx_queue.h
    src/core/ngx_radix_tree.c
    src/core/ngx_radix_tree.h
    src/core/ngx_rbtree.c
    src/core/ngx_rbtree.h
    src/core/ngx_regex.c
    src/core/ngx_regex.h
    src/core/ngx_resolver.c
    src/core/ngx_resolver.h
    src/core/ngx_rwlock.c
    src/core/ngx_rwlock.h
    src/core/ngx_sha1.h
    src/core/ngx_shmtx.c
    src/core/ngx_shmtx.h
    src/core/ngx_slab.c
    src/core/ngx_slab.h
    src/core/ngx_spinlock.c
    src/core/ngx_string.c
    src/core/ngx_string.h
    src/core/ngx_syslog.c
    src/core/ngx_syslog.h
    src/core/ngx_thread_pool.c
    src/core/ngx_thread_pool.h
    src/core/ngx_times.c
    src/core/ngx_times.h
    src/echo-nginx-module-master/src/ddebug.h
    src/echo-nginx-module-master/src/ngx_http_echo_echo.c
    src/echo-nginx-module-master/src/ngx_http_echo_echo.h
    src/echo-nginx-module-master/src/ngx_http_echo_filter.c
    src/echo-nginx-module-master/src/ngx_http_echo_filter.h
    src/echo-nginx-module-master/src/ngx_http_echo_foreach.c
    src/echo-nginx-module-master/src/ngx_http_echo_foreach.h
    src/echo-nginx-module-master/src/ngx_http_echo_handler.c
    src/echo-nginx-module-master/src/ngx_http_echo_handler.h
    src/echo-nginx-module-master/src/ngx_http_echo_location.c
    src/echo-nginx-module-master/src/ngx_http_echo_location.h
    src/echo-nginx-module-master/src/ngx_http_echo_module.c
    src/echo-nginx-module-master/src/ngx_http_echo_module.h
    src/echo-nginx-module-master/src/ngx_http_echo_request_info.c
    src/echo-nginx-module-master/src/ngx_http_echo_request_info.h
    src/echo-nginx-module-master/src/ngx_http_echo_sleep.c
    src/echo-nginx-module-master/src/ngx_http_echo_sleep.h
    src/echo-nginx-module-master/src/ngx_http_echo_subrequest.c
    src/echo-nginx-module-master/src/ngx_http_echo_subrequest.h
    src/echo-nginx-module-master/src/ngx_http_echo_timer.c
    src/echo-nginx-module-master/src/ngx_http_echo_timer.h
    src/echo-nginx-module-master/src/ngx_http_echo_util.c
    src/echo-nginx-module-master/src/ngx_http_echo_util.h
    src/echo-nginx-module-master/src/ngx_http_echo_var.c
    src/echo-nginx-module-master/src/ngx_http_echo_var.h
    src/event/modules/ngx_devpoll_module.c
    src/event/modules/ngx_epoll_module.c
    src/event/modules/ngx_eventport_module.c
    src/event/modules/ngx_kqueue_module.c
    src/event/modules/ngx_poll_module.c
    src/event/modules/ngx_select_module.c
    src/event/modules/ngx_win32_select_module.c
    src/event/ngx_event.c
    src/event/ngx_event.h
    src/event/ngx_event_accept.c
    src/event/ngx_event_connect.c
    src/event/ngx_event_connect.h
    src/event/ngx_event_openssl.c
    src/event/ngx_event_openssl.h
    src/event/ngx_event_openssl_stapling.c
    src/event/ngx_event_pipe.c
    src/event/ngx_event_pipe.h
    src/event/ngx_event_posted.c
    src/event/ngx_event_posted.h
    src/event/ngx_event_timer.c
    src/event/ngx_event_timer.h
    src/http/modules/perl/ngx_http_perl_module.c
    src/http/modules/perl/ngx_http_perl_module.h
    src/http/modules/ngx_http_access_module.c
    src/http/modules/ngx_http_addition_filter_module.c
    src/http/modules/ngx_http_auth_basic_module.c
    src/http/modules/ngx_http_auth_request_module.c
    src/http/modules/ngx_http_autoindex_module.c
    src/http/modules/ngx_http_browser_module.c
    src/http/modules/ngx_http_charset_filter_module.c
    src/http/modules/ngx_http_chunked_filter_module.c
    src/http/modules/ngx_http_dav_module.c
    src/http/modules/ngx_http_degradation_module.c
    src/http/modules/ngx_http_empty_gif_module.c
    src/http/modules/ngx_http_fastcgi_module.c
    src/http/modules/ngx_http_flv_module.c
    src/http/modules/ngx_http_geo_module.c
    src/http/modules/ngx_http_geoip_module.c
    src/http/modules/ngx_http_gunzip_filter_module.c
    src/http/modules/ngx_http_gzip_filter_module.c
    src/http/modules/ngx_http_gzip_static_module.c
    src/http/modules/ngx_http_headers_filter_module.c
    src/http/modules/ngx_http_image_filter_module.c
    src/http/modules/ngx_http_index_module.c
    src/http/modules/ngx_http_limit_conn_module.c
    src/http/modules/ngx_http_limit_req_module.c
    src/http/modules/ngx_http_log_module.c
    src/http/modules/ngx_http_map_module.c
    src/http/modules/ngx_http_memcached_module.c
    src/http/modules/ngx_http_mp4_module.c
    src/http/modules/ngx_http_not_modified_filter_module.c
    src/http/modules/ngx_http_proxy_module.c
    src/http/modules/ngx_http_random_index_module.c
    src/http/modules/ngx_http_range_filter_module.c
    src/http/modules/ngx_http_realip_module.c
    src/http/modules/ngx_http_referer_module.c
    src/http/modules/ngx_http_rewrite_module.c
    src/http/modules/ngx_http_scgi_module.c
    src/http/modules/ngx_http_secure_link_module.c
    src/http/modules/ngx_http_split_clients_module.c
    src/http/modules/ngx_http_ssi_filter_module.c
    src/http/modules/ngx_http_ssi_filter_module.h
    src/http/modules/ngx_http_ssl_module.c
    src/http/modules/ngx_http_ssl_module.h
    src/http/modules/ngx_http_static_module.c
    src/http/modules/ngx_http_stub_status_module.c
    src/http/modules/ngx_http_sub_filter_module.c
    src/http/modules/ngx_http_upstream_hash_module.c
    src/http/modules/ngx_http_upstream_ip_hash_module.c
    src/http/modules/ngx_http_upstream_keepalive_module.c
    src/http/modules/ngx_http_upstream_least_conn_module.c
    src/http/modules/ngx_http_upstream_zone_module.c
    src/http/modules/ngx_http_userid_filter_module.c
    src/http/modules/ngx_http_uwsgi_module.c
    src/http/modules/ngx_http_xslt_filter_module.c
    src/http/ngx_http.c
    src/http/ngx_http.h
    src/http/ngx_http_cache.h
    src/http/ngx_http_config.h
    src/http/ngx_http_copy_filter_module.c
    src/http/ngx_http_core_module.c
    src/http/ngx_http_core_module.h
    src/http/ngx_http_file_cache.c
    src/http/ngx_http_header_filter_module.c
    src/http/ngx_http_parse.c
    src/http/ngx_http_postpone_filter_module.c
    src/http/ngx_http_request.c
    src/http/ngx_http_request.h
    src/http/ngx_http_request_body.c
    src/http/ngx_http_script.c
    src/http/ngx_http_script.h
    src/http/ngx_http_spdy.c
    src/http/ngx_http_spdy.h
    src/http/ngx_http_spdy_filter_module.c
    src/http/ngx_http_spdy_module.c
    src/http/ngx_http_spdy_module.h
    src/http/ngx_http_special_response.c
    src/http/ngx_http_upstream.c
    src/http/ngx_http_upstream.h
    src/http/ngx_http_upstream_round_robin.c
    src/http/ngx_http_upstream_round_robin.h
    src/http/ngx_http_variables.c
    src/http/ngx_http_variables.h
    src/http/ngx_http_write_filter_module.c
    src/lua-nginx-module-master/src/api/ngx_http_lua_api.h
    src/lua-nginx-module-master/src/ddebug.h
    src/lua-nginx-module-master/src/ngx_http_lua_accessby.c
    src/lua-nginx-module-master/src/ngx_http_lua_accessby.h
    src/lua-nginx-module-master/src/ngx_http_lua_api.c
    src/lua-nginx-module-master/src/ngx_http_lua_args.c
    src/lua-nginx-module-master/src/ngx_http_lua_args.h
    src/lua-nginx-module-master/src/ngx_http_lua_balancer.c
    src/lua-nginx-module-master/src/ngx_http_lua_balancer.h
    src/lua-nginx-module-master/src/ngx_http_lua_bodyfilterby.c
    src/lua-nginx-module-master/src/ngx_http_lua_bodyfilterby.h
    src/lua-nginx-module-master/src/ngx_http_lua_cache.c
    src/lua-nginx-module-master/src/ngx_http_lua_cache.h
    src/lua-nginx-module-master/src/ngx_http_lua_capturefilter.c
    src/lua-nginx-module-master/src/ngx_http_lua_capturefilter.h
    src/lua-nginx-module-master/src/ngx_http_lua_clfactory.c
    src/lua-nginx-module-master/src/ngx_http_lua_clfactory.h
    src/lua-nginx-module-master/src/ngx_http_lua_common.h
    src/lua-nginx-module-master/src/ngx_http_lua_config.c
    src/lua-nginx-module-master/src/ngx_http_lua_config.h
    src/lua-nginx-module-master/src/ngx_http_lua_consts.c
    src/lua-nginx-module-master/src/ngx_http_lua_consts.h
    src/lua-nginx-module-master/src/ngx_http_lua_contentby.c
    src/lua-nginx-module-master/src/ngx_http_lua_contentby.h
    src/lua-nginx-module-master/src/ngx_http_lua_control.c
    src/lua-nginx-module-master/src/ngx_http_lua_control.h
    src/lua-nginx-module-master/src/ngx_http_lua_coroutine.c
    src/lua-nginx-module-master/src/ngx_http_lua_coroutine.h
    src/lua-nginx-module-master/src/ngx_http_lua_ctx.c
    src/lua-nginx-module-master/src/ngx_http_lua_ctx.h
    src/lua-nginx-module-master/src/ngx_http_lua_directive.c
    src/lua-nginx-module-master/src/ngx_http_lua_directive.h
    src/lua-nginx-module-master/src/ngx_http_lua_exception.c
    src/lua-nginx-module-master/src/ngx_http_lua_exception.h
    src/lua-nginx-module-master/src/ngx_http_lua_headerfilterby.c
    src/lua-nginx-module-master/src/ngx_http_lua_headerfilterby.h
    src/lua-nginx-module-master/src/ngx_http_lua_headers.c
    src/lua-nginx-module-master/src/ngx_http_lua_headers.h
    src/lua-nginx-module-master/src/ngx_http_lua_headers_in.c
    src/lua-nginx-module-master/src/ngx_http_lua_headers_in.h
    src/lua-nginx-module-master/src/ngx_http_lua_headers_out.c
    src/lua-nginx-module-master/src/ngx_http_lua_headers_out.h
    src/lua-nginx-module-master/src/ngx_http_lua_initby.c
    src/lua-nginx-module-master/src/ngx_http_lua_initby.h
    src/lua-nginx-module-master/src/ngx_http_lua_initworkerby.c
    src/lua-nginx-module-master/src/ngx_http_lua_initworkerby.h
    src/lua-nginx-module-master/src/ngx_http_lua_lex.c
    src/lua-nginx-module-master/src/ngx_http_lua_lex.h
    src/lua-nginx-module-master/src/ngx_http_lua_log.c
    src/lua-nginx-module-master/src/ngx_http_lua_log.h
    src/lua-nginx-module-master/src/ngx_http_lua_logby.c
    src/lua-nginx-module-master/src/ngx_http_lua_logby.h
    src/lua-nginx-module-master/src/ngx_http_lua_misc.c
    src/lua-nginx-module-master/src/ngx_http_lua_misc.h
    src/lua-nginx-module-master/src/ngx_http_lua_module.c
    src/lua-nginx-module-master/src/ngx_http_lua_ndk.c
    src/lua-nginx-module-master/src/ngx_http_lua_ndk.h
    src/lua-nginx-module-master/src/ngx_http_lua_output.c
    src/lua-nginx-module-master/src/ngx_http_lua_output.h
    src/lua-nginx-module-master/src/ngx_http_lua_pcrefix.c
    src/lua-nginx-module-master/src/ngx_http_lua_pcrefix.h
    src/lua-nginx-module-master/src/ngx_http_lua_phase.c
    src/lua-nginx-module-master/src/ngx_http_lua_phase.h
    src/lua-nginx-module-master/src/ngx_http_lua_probe.h
    src/lua-nginx-module-master/src/ngx_http_lua_regex.c
    src/lua-nginx-module-master/src/ngx_http_lua_regex.h
    src/lua-nginx-module-master/src/ngx_http_lua_req_body.c
    src/lua-nginx-module-master/src/ngx_http_lua_req_body.h
    src/lua-nginx-module-master/src/ngx_http_lua_req_method.c
    src/lua-nginx-module-master/src/ngx_http_lua_req_method.h
    src/lua-nginx-module-master/src/ngx_http_lua_rewriteby.c
    src/lua-nginx-module-master/src/ngx_http_lua_rewriteby.h
    src/lua-nginx-module-master/src/ngx_http_lua_script.c
    src/lua-nginx-module-master/src/ngx_http_lua_script.h
    src/lua-nginx-module-master/src/ngx_http_lua_semaphore.c
    src/lua-nginx-module-master/src/ngx_http_lua_semaphore.h
    src/lua-nginx-module-master/src/ngx_http_lua_setby.c
    src/lua-nginx-module-master/src/ngx_http_lua_setby.h
    src/lua-nginx-module-master/src/ngx_http_lua_shdict.c
    src/lua-nginx-module-master/src/ngx_http_lua_shdict.h
    src/lua-nginx-module-master/src/ngx_http_lua_sleep.c
    src/lua-nginx-module-master/src/ngx_http_lua_sleep.h
    src/lua-nginx-module-master/src/ngx_http_lua_socket_tcp.c
    src/lua-nginx-module-master/src/ngx_http_lua_socket_tcp.h
    src/lua-nginx-module-master/src/ngx_http_lua_socket_udp.c
    src/lua-nginx-module-master/src/ngx_http_lua_socket_udp.h
    src/lua-nginx-module-master/src/ngx_http_lua_ssl_certby.c
    src/lua-nginx-module-master/src/ngx_http_lua_ssl_certby.h
    src/lua-nginx-module-master/src/ngx_http_lua_ssl_ocsp.c
    src/lua-nginx-module-master/src/ngx_http_lua_string.c
    src/lua-nginx-module-master/src/ngx_http_lua_string.h
    src/lua-nginx-module-master/src/ngx_http_lua_subrequest.c
    src/lua-nginx-module-master/src/ngx_http_lua_subrequest.h
    src/lua-nginx-module-master/src/ngx_http_lua_time.c
    src/lua-nginx-module-master/src/ngx_http_lua_time.h
    src/lua-nginx-module-master/src/ngx_http_lua_timer.c
    src/lua-nginx-module-master/src/ngx_http_lua_timer.h
    src/lua-nginx-module-master/src/ngx_http_lua_uri.c
    src/lua-nginx-module-master/src/ngx_http_lua_uri.h
    src/lua-nginx-module-master/src/ngx_http_lua_uthread.c
    src/lua-nginx-module-master/src/ngx_http_lua_uthread.h
    src/lua-nginx-module-master/src/ngx_http_lua_util.c
    src/lua-nginx-module-master/src/ngx_http_lua_util.h
    src/lua-nginx-module-master/src/ngx_http_lua_variable.c
    src/lua-nginx-module-master/src/ngx_http_lua_variable.h
    src/lua-nginx-module-master/src/ngx_http_lua_worker.c
    src/lua-nginx-module-master/src/ngx_http_lua_worker.h
    src/lua-nginx-module-master/t/data/fake-module/ngx_http_fake_module.c
    src/mail/ngx_mail.c
    src/mail/ngx_mail.h
    src/mail/ngx_mail_auth_http_module.c
    src/mail/ngx_mail_core_module.c
    src/mail/ngx_mail_handler.c
    src/mail/ngx_mail_imap_handler.c
    src/mail/ngx_mail_imap_module.c
    src/mail/ngx_mail_imap_module.h
    src/mail/ngx_mail_parse.c
    src/mail/ngx_mail_pop3_handler.c
    src/mail/ngx_mail_pop3_module.c
    src/mail/ngx_mail_pop3_module.h
    src/mail/ngx_mail_proxy_module.c
    src/mail/ngx_mail_smtp_handler.c
    src/mail/ngx_mail_smtp_module.c
    src/mail/ngx_mail_smtp_module.h
    src/mail/ngx_mail_ssl_module.c
    src/mail/ngx_mail_ssl_module.h
    src/misc/ngx_cpp_test_module.cpp
    src/misc/ngx_google_perftools_module.c
    src/my_test_module/ngx_http_mytest_module.c
    src/mytest_config/mytest_config.c
    src/mytest_subrequest/ngx_http_subrequest_mytest_module.c
    src/mytest_upstream/mytest_upstream.c
    src/nginx-requestkey-module-master/ngx_http_accesskey_module.c
    src/ngx_http_hello_world_module/ngx_http_hello_world_module.c
    src/ngx_http_myfilter_module/ngx_http_myfilter_module.c
    src/os/unix/ngx_alloc.c
    src/os/unix/ngx_alloc.h
    src/os/unix/ngx_atomic.h
    src/os/unix/ngx_channel.c
    src/os/unix/ngx_channel.h
    src/os/unix/ngx_daemon.c
    src/os/unix/ngx_darwin.h
    src/os/unix/ngx_darwin_config.h
    src/os/unix/ngx_darwin_init.c
    src/os/unix/ngx_darwin_sendfile_chain.c
    src/os/unix/ngx_errno.c
    src/os/unix/ngx_errno.h
    src/os/unix/ngx_file_aio_read.c
    src/os/unix/ngx_files.c
    src/os/unix/ngx_files.h
    src/os/unix/ngx_freebsd.h
    src/os/unix/ngx_freebsd_config.h
    src/os/unix/ngx_freebsd_init.c
    src/os/unix/ngx_freebsd_sendfile_chain.c
    src/os/unix/ngx_gcc_atomic_amd64.h
    src/os/unix/ngx_gcc_atomic_ppc.h
    src/os/unix/ngx_gcc_atomic_sparc64.h
    src/os/unix/ngx_gcc_atomic_x86.h
    src/os/unix/ngx_linux.h
    src/os/unix/ngx_linux_aio_read.c
    src/os/unix/ngx_linux_config.h
    src/os/unix/ngx_linux_init.c
    src/os/unix/ngx_linux_sendfile_chain.c
    src/os/unix/ngx_os.h
    src/os/unix/ngx_posix_config.h
    src/os/unix/ngx_posix_init.c
    src/os/unix/ngx_process.c
    src/os/unix/ngx_process.h
    src/os/unix/ngx_process_cycle.c
    src/os/unix/ngx_process_cycle.h
    src/os/unix/ngx_readv_chain.c
    src/os/unix/ngx_recv.c
    src/os/unix/ngx_send.c
    src/os/unix/ngx_setaffinity.c
    src/os/unix/ngx_setaffinity.h
    src/os/unix/ngx_setproctitle.c
    src/os/unix/ngx_setproctitle.h
    src/os/unix/ngx_shmem.c
    src/os/unix/ngx_shmem.h
    src/os/unix/ngx_socket.c
    src/os/unix/ngx_socket.h
    src/os/unix/ngx_solaris.h
    src/os/unix/ngx_solaris_config.h
    src/os/unix/ngx_solaris_init.c
    src/os/unix/ngx_solaris_sendfilev_chain.c
    src/os/unix/ngx_sunpro_atomic_sparc64.h
    src/os/unix/ngx_thread.h
    src/os/unix/ngx_thread_cond.c
    src/os/unix/ngx_thread_id.c
    src/os/unix/ngx_thread_mutex.c
    src/os/unix/ngx_time.c
    src/os/unix/ngx_time.h
    src/os/unix/ngx_udp_recv.c
    src/os/unix/ngx_user.c
    src/os/unix/ngx_user.h
    src/os/unix/ngx_writev_chain.c
    src/redis2-nginx-module-master/src/ddebug.h
    src/redis2-nginx-module-master/src/ngx_http_redis2_handler.c
    src/redis2-nginx-module-master/src/ngx_http_redis2_handler.h
    src/redis2-nginx-module-master/src/ngx_http_redis2_module.c
    src/redis2-nginx-module-master/src/ngx_http_redis2_module.h
    src/redis2-nginx-module-master/src/ngx_http_redis2_reply.c
    src/redis2-nginx-module-master/src/ngx_http_redis2_reply.h
    src/redis2-nginx-module-master/src/ngx_http_redis2_util.c
    src/redis2-nginx-module-master/src/ngx_http_redis2_util.h
    src/sendfile_test/sendfile_test.c
    src/stream/ngx_stream.c
    src/stream/ngx_stream.h
    src/stream/ngx_stream_access_module.c
    src/stream/ngx_stream_core_module.c
    src/stream/ngx_stream_handler.c
    src/stream/ngx_stream_proxy_module.c
    src/stream/ngx_stream_ssl_module.c
    src/stream/ngx_stream_ssl_module.h
    src/stream/ngx_stream_upstream.c
    src/stream/ngx_stream_upstream.h
    src/stream/ngx_stream_upstream_hash_module.c
    src/stream/ngx_stream_upstream_least_conn_module.c
    src/stream/ngx_stream_upstream_round_robin.c
    src/stream/ngx_stream_upstream_round_robin.h
    src/stream/ngx_stream_upstream_zone_module.c)

include_directories(objs)
include_directories(src)
include_directories(src/core)
include_directories(src/echo-nginx-module-master)
include_directories(src/echo-nginx-module-master/src)
include_directories(src/event)
include_directories(src/http)
include_directories(src/http/modules)
include_directories(src/http/modules/perl)
include_directories(src/mail)
include_directories(src/misc)
include_directories(src/my_test_module)
include_directories(src/mytest_config)
include_directories(src/mytest_subrequest)
include_directories(src/mytest_upstream)
include_directories(src/nginx-requestkey-module-master)
include_directories(src/ngx_http_hello_world_module)
include_directories(src/ngx_http_myfilter_module)
include_directories(src/os)
include_directories(src/os/unix)
include_directories(src/redis2-nginx-module-master)
include_directories(src/redis2-nginx-module-master/src)
include_directories(src/sendfile_test)
include_directories(src/stream)

add_executable(nginx_1_9_2 ${SOURCE_FILES})